# gst-element-examples

./: README.md
gst-plugins-custom-examples/gst/mysink/: gstmysink.c  gstmysink.h  meson.build
gst-plugins-custom-examples/gst/mysrc/: gstmysrc.c  gstmysrc.h  meson.build
gst-plugins-custom-examples/gst/mytransform/: gstmytransform.c  gstmytransform.h  meson.build
samples/001/: Makefile  sample001.c
